--- a/projects/AnimalTrack/download.html
+++ b/projects/AnimalTrack/download.html
@@ -46,6 +46,10 @@
 	  </div>
       <br>
 	  
+	  <div class="section Highlights" ,="" id="Highlights" style="margin-top: -25px;">
+        <h3 style="margin-bottom: 10px;color:red">The download links will be made available soon!</h3>
+      </div>
+	  
 	  <HR style="width:98%;margin:0 auto;border: 0;height: 2px;background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0))">
 	  
 	  <div class="section Highlights" ,="" id="Highlights" style="margin-top: 10px;">
@@ -66,15 +70,15 @@
 		<p style="margin-top: 6px;">
 		Download the <b>whole AnimalTrack</b> (labels included) with all 58 sequences in the below:
 		<br>
-		<a href="https://drive.google.com/file/d/1e74RCMGQR7lJOkFTWH4ZaNmJzJ0SHDr-/view?usp=sharing"><font size="4"><b>AnimalTrack - google drive</b></font></a> OR 
+		<a href="https://drive.google.com/drive/folders/1P0oaPRruthyALztjJW8nbOegOpU_szew?usp=sharing"><font size="4"><b>AnimalTrack - google drive</b></font></a> OR 
 		<a href="https://pan.baidu.com/s/12j30BZkK6d2rpFTXba_lVQ?pwd=tpss"><font size="4"><b>AnimalTrack - baidu pan</b></font></a>
 		
 		<br><br>
 		
 		Download the <b>Training/Testing splits</b> in the below: 
 		<br>
-		<a href="https://drive.google.com/file/d/11ZRMUjNC2Cj1cRM-MvzTte30YKxluMy9/view?usp=sharing"><font size="4"><b>Training/Testing Splits - google drive</b></font></a> OR 
-		<a href="https://pan.baidu.com/s/1mWidjR_wmNFrfW7lNuSvdQ?pwd=i3uw"><font size="4"><b>Training/Testing Splits - baidu pan</b></font></a> 
+		<a href="https://drive.google.com/drive/folders/1gpPPmFAqNeH4QmWR7STGO9qffYte3c3d?usp=sharing"><font size="4"><b>Training/Testing Splits - google drive</b></font></a> OR 
+		<a href="https://pan.baidu.com/s/1qu3m0GD9jUqvdqaFRmv12w?pwd=6te5"><font size="4"><b>Training/Testing Splits - baidu pan</b></font></a> 
 		
 		</p>
       </div>
@@ -92,7 +96,7 @@
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/52.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/53.mp4"></video>
 			<br>
-			<a href="https://drive.google.com/file/d/1hI4NLyR-IoWNXjddTD_3hIw1JvIiaa_v/view?usp=sharing"><font size="4"><b>Zebra - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/1iaiTVspguMv7P3Ptva5hVw?pwd=a37w"><font size="4"><b>Zebra - baidu pan</b></font></a><br>
+			<a href="https://drive.google.com/drive/folders/1pIXIMoG4F9Ivohe7gjvLs9LkGi7qsSPW?usp=sharing"><font size="4"><b>Zebra - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/1b4aJTgqj--sDCwd9l8Wxmg?pwd=bfwg"><font size="4"><b>Zebra - baidu pan</b></font></a><br>
 			<br>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/44.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/45.mp4"></video>
@@ -100,7 +104,7 @@
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/47.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/48.mp4"></video>
 			<br>
-			<a href="https://drive.google.com/file/d/1kc-f9KpYz4fX-VNAIhVfrpEU_-n6nTmk/view?usp=sharing"><font size="4"><b>Rabbit - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/16eGoOgeg1tcosYJMX9ro_A?pwd=bamy"><font size="4"><b>Rabbit - baidu pan</b></font></a><br>
+			<a href="https://drive.google.com/drive/folders/1mYTu92O9fyCtVaIKBU0nJuhqH8LUTYLi?usp=sharing"><font size="4"><b>Rabbit - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/1X1I2UmOrWb16KrmxBb3eGg?pwd=k0mu"><font size="4"><b>Rabbit - baidu pan</b></font></a><br>
 			<br>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/39.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/40.mp4"></video>
@@ -108,7 +112,7 @@
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/42.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/43.mp4"></video>
 			<br>
-			<a href="https://drive.google.com/file/d/1vDGRY4N1a1Qs58djTCJFVZBeX132Zqlp/view?usp=share_link"><font size="4"><b>Pig - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/1WKAi2G8cHfLtFP1cMaZW0g?pwd=rmsn"><font size="4"><b>Pig - baidu pan</b></font></a><br>
+			<a href="https://drive.google.com/drive/folders/1HnEyuIJyYPbCp7pj30tlg6uIPbzvuOdO?usp=sharing"><font size="4"><b>Pig - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/1kzCXAcoCitz5Dq1Vc1qOQQ?pwd=c6fz"><font size="4"><b>Pig - baidu pan</b></font></a><br>
 			<br>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/54.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/56.mp4"></video>
@@ -116,7 +120,7 @@
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/55.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/58.mp4"></video>
 			<br>
-			<a href="https://drive.google.com/file/d/17kiKPthQ1L_O1qH4g0r8A4dNPE0b0dOI/view?usp=sharing"><font size="4"><b>Chicken - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/1vaIXDqjmQ3_Cptx89PsKuw?pwd=fnxn"><font size="4"><b>Chicken - baidu pan</b></font></a><br>
+			<a href="https://drive.google.com/drive/folders/1RCe18T4M0TA8hZB2G734VlCuvoBqZxjt?usp=sharing"><font size="4"><b>Chicken - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/1JsBbiJHAfLHkmd-SBDGAzw?pwd=stll"><font size="4"><b>Chicken - baidu pan</b></font></a><br>
 			<br>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/33.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/34.mp4"></video>
@@ -125,7 +129,7 @@
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/37.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/38.mp4"></video>
 			<br>
-			<a href="https://drive.google.com/file/d/1r4rrnBY82Ycn56NPgvURIsxJ5ffT13pi/view?usp=sharing"><font size="4"><b>Penguin - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/1XWBNTpRcVPPh9Okc15OglQ?pwd=dwo3"><font size="4"><b>Penguin - baidu pan</b></font></a><br>
+			<a href="https://drive.google.com/drive/folders/1yA39KHz78cHkC9coIHPwzQvl849AwkGp?usp=sharing"><font size="4"><b>Penguin - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/1TMhDTioAcINtF7upBIO6Zg?pwd=8x78"><font size="4"><b>Penguin - baidu pan</b></font></a><br>
 			<br>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/20.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/21.mp4"></video>
@@ -134,7 +138,7 @@
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/24.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/25.mp4"></video>
 			<br>
-			<a href="https://drive.google.com/file/d/17zW7HQMqzXzbBrt_LfDIijFaMNvukzPp/view?usp=sharing"><font size="4"><b>Goose - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/1llAfw7t4Xb_9yR1BBLE7rw?pwd=22dy"><font size="4"><b>Goose - baidu pan</b></font></a><br>
+			<a href="https://drive.google.com/drive/folders/1VxWE6AYUAOn7vDEeE52VdBCuPYqj9SI5?usp=sharing"><font size="4"><b>Goose - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/1-K_CBL44nakP53hhHlTyCQ?pwd=965z"><font size="4"><b>Goose - baidu pan</b></font></a><br>
 			<br>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/14.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/15.mp4"></video>
@@ -143,7 +147,7 @@
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/18.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/19.mp4"></video>
 			<br>
-			<a href="https://drive.google.com/file/d/1srTL6M3bbt5IwV7XtqTFcuV7jSc46lgL/view?usp=sharing"><font size="4"><b>Duck - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/1qHpSvBX6LspuVguKQ_1QHQ?pwd=rt43"><font size="4"><b>Duck - baidu pan</b></font></a><br>
+			<a href="https://drive.google.com/drive/folders/1U5Z1M1SR55thkFGEvadiGgwF26PjsV3N?usp=sharing"><font size="4"><b>Duck - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/1-aN7cuFEMN4OVFXLG7Rwmg?pwd=z64l"><font size="4"><b>Duck - baidu pan</b></font></a><br>
 			<br>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/8.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/9.mp4"></video>
@@ -152,7 +156,7 @@
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/12.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/13.mp4"></video>
 			<br>
-			<a href="https://drive.google.com/file/d/16DnwoiqRLHaLoSqryUumFsGIX5CyX9Gw/view?usp=sharing"><font size="4"><b>Dolphin - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/1lzYwkmjtuhphigLi7oXWxw?pwd=1aqw"><font size="4"><b>Dolphin - baidu pan</b></font></a><br>
+			<a href="https://drive.google.com/drive/folders/1MRCB_MMQy8kMm3NkSsm8htpKfMO1Cedx?usp=sharing"><font size="4"><b>Dolphin - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/1kbZzqK9uSPsfr8ElQ35OYg?pwd=qs36"><font size="4"><b>Dolphin - baidu pan</b></font></a><br>
 			<br>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/1.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/2.mp4"></video>
@@ -162,7 +166,7 @@
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/6.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/7.mp4"></video>
 			<br>
-			<a href="https://drive.google.com/file/d/15RtgBAlcQB_L1uFYbRXkc-6Lb8TfB7oT/view?usp=sharing"><font size="4"><b>Deer - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/17pPgSs1N7K9xbdBLt9WclA?pwd=zp10"><font size="4"><b>Deer - baidu pan</b></font></a><br>
+			<a href="https://drive.google.com/drive/folders/1fDXvrMILID9zl636SulzV_K7ibQq-Bh-?usp=sharing"><font size="4"><b>Deer - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/14bQz78EQh2bM3G0tdi_ajg?pwd=kgel"><font size="4"><b>Deer - baidu pan</b></font></a><br>
 			<br>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/26.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/27.mp4"></video>
@@ -171,7 +175,7 @@
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/30.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/31.mp4"></video>
 			<video width="13.5%"  loop="" autoplay="" playsinline="" muted="" class="figure-img img-fluid" src="./materials/32.mp4"></video>
-			<a href="https://drive.google.com/file/d/1RYu3NrLXPu9R1Vr4cBJz1LarfyGMepOS/view?usp=sharing"><font size="4"><b>Horse - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/1CfdNreeyoJuhlJn9OnUiKQ?pwd=2euz"><font size="4"><b>Horse - baidu pan</b></font></a>
+			<a href="https://drive.google.com/drive/folders/1A7QbEa6encdOhjW8KRFg2YrK32Ot1-wv?usp=sharing"><font size="4"><b>Horse - google drive</b></font></a> OR <a href="https://pan.baidu.com/s/1dwB14H_MRz09fOg58krPnA?pwd=e8ii"><font size="4"><b>Horse - baidu pan</b></font></a>
 			<br>
 	</div>
 	<HR style="width:98%;margin:0 auto;border: 0;height: 2px;background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0))">
