--- a/publications.html
+++ b/publications.html
@@ -76,6 +76,22 @@
 	<table border=0 cellpadding=4>
 			
 		<tr>
+			<td><img src="./publication/vot.png", style="border-radius:5% 5% 5% 5%;border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Visual object tracking: Progress, challenge, and future</font>
+					<br>
+					<font color="#000000">L. Zhang and H. Fan</font>
+					<br>
+					<font>The Innovation, 2023, in press.</font>
+					<br>
+					<a href="https://www.cell.com/the-innovation/fulltext/S2666-6758(23)00030-9" target="_blank"><font color="#0099ff">paper</font></a>
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
 			<td><img src="./publication/animaltrack.gif", style="border-radius:5% 5% 5% 5%;border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
