--- a/teaching/23S-5218/index.htm
+++ b/teaching/23S-5218/index.htm
@@ -127,6 +127,9 @@ course website regularly for updated reading materials.</font>
 	
 	<ul>
 		<li>
+			<font size="4"> <b>02/28/2022:</b> Paper review list 3 is out, due on 3/7.</font>
+		</li>
+		<li>
 			<font size="4"> <b>02/22/2022:</b> The project report is due on 4/20.</font>
 		</li>
 		<li>
@@ -200,9 +203,9 @@ course website regularly for updated reading materials.</font>
 		
 	</ol>
 	</p>
-	<!--
+	
 	<p style="text-align:justify">
-	<font size="4" ><b>Paper review list 3</b> (<font size="4" color="#FF0000">due on 3/29</font>):</font>
+	<font size="4" ><b>Paper review list 3</b> (<font size="4" color="#FF0000">due on 3/7</font>):</font>
 	<ol start="5">
 		<li>
 			<font size="4" > R. Girshick, J. Donahue, T. Darrell, and J. Malik, Rich feature hierarchies for accurate object detection and semantic segmentation, <i>CVPR</i>, 2014.</font>
@@ -210,12 +213,14 @@ course website regularly for updated reading materials.</font>
 		<li>
 			<font size="4" > R. Girshick, Fast R-CNN, <i>ICCV</i>, 2015.</font>
 		</li>
+		
 	</ol>
 	</p>
 	
+	<!--
 	<p style="text-align:justify">
 	<font size="4" ><b>Paper review list 4</b> (<font size="4" color="#FF0000">due on 4/5</font>):</font>
-	<ol>
+	<ol start="7">
 		<li>
 			<font size="4" > S. Ren, K. He, R. Girshick, and J. Sun, Faster R-CNN: Towards real-time object detection with region proposal networks, <i>NIPS</i>, 2015.</font>
 		</li>
@@ -224,6 +229,7 @@ course website regularly for updated reading materials.</font>
 		</li>
 	</ol>
 	</p>
+
 	
 	<p style="text-align:justify">
 	<font size="4" ><b>Paper review list 5</b> (<font size="4" color="#FF0000">due on 4/19</font>):</font>
