--- a/publications.html
+++ b/publications.html
@@ -83,7 +83,7 @@
 					<br>
 					<font color="#000000">L. Zhang and H. Fan</font>
 					<br>
-					<font>The Innovation, 2023, in press.</font>
+					<font>The Innovation, 2023, in press. (Invited)</font>
 					<br>
 					<a href="https://www.cell.com/the-innovation/fulltext/S2666-6758(23)00030-9" target="_blank"><font color="#0099ff">paper</font></a>
 					<br>
