--- a/publications.html
+++ b/publications.html
@@ -79,7 +79,7 @@
 			<td><img src="./publication/vot.png", style="border-radius:5% 5% 5% 5%;border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-					<font style="font-weight:bold">Visual object tracking: Progress, challenge, and future</font>
+					<font style="font-weight:bold">Visual Object Tracking: Progress, Challenge, and Future</font>
 					<br>
 					<font color="#000000">L. Zhang and H. Fan</font>
 					<br>
