--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
-		<li><font style="font-weight:bold; line-height: 120%">2023-02:</font> A <a href="https://www.cell.com/the-innovation/fulltext/S2666-6758(23)00030-9" target="_blank"><font><font color="#0099ff">commentary paper</font></font></a> on tracking is accepted to The Innovation.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2023-02:</font> A commentary on tracking (<a href="https://www.cell.com/the-innovation/fulltext/S2666-6758(23)00030-9" target="_blank"><font><font color="#0099ff">pdf</font></font></a>) is accepted to The Innovation.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-01:</font> Welcome PhD student Shaohua Dong to join our team.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-01:</font> Check out our new preprint (<a href="https://arxiv.org/abs/2301.00371" target="_blank"><font><font color="#0099ff">arXiv</font></font></a>) on domain adaptive object detection.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2022-11:</font> Check out PIDray (<a href="https://arxiv.org/abs/2211.10763" target="_blank"><font><font color="#0099ff">arXiv</font></font></a>) for X-ray-based real-world prohibited item detection/segmentation/classification.</li>
