--- a/teaching/23S-5218/index.htm
+++ b/teaching/23S-5218/index.htm
@@ -127,6 +127,9 @@ course website regularly for updated reading materials.</font>
 	
 	<ul>
 		<li>
+			<font size="4"> <b>03/06/2022:</b> Paper review list 4 is out, due on 3/14.</font>
+		</li>
+		<li>
 			<font size="4"> <b>02/28/2022:</b> Paper review list 3 is out, due on 3/7.</font>
 		</li>
 		<li>
@@ -217,9 +220,9 @@ course website regularly for updated reading materials.</font>
 	</ol>
 	</p>
 	
-	<!--
+	
 	<p style="text-align:justify">
-	<font size="4" ><b>Paper review list 4</b> (<font size="4" color="#FF0000">due on 4/5</font>):</font>
+	<font size="4" ><b>Paper review list 4</b> (<font size="4" color="#FF0000">due on 3/14</font>):</font>
 	<ol start="7">
 		<li>
 			<font size="4" > S. Ren, K. He, R. Girshick, and J. Sun, Faster R-CNN: Towards real-time object detection with region proposal networks, <i>NIPS</i>, 2015.</font>
@@ -230,7 +233,7 @@ course website regularly for updated reading materials.</font>
 	</ol>
 	</p>
 
-	
+    <!--
 	<p style="text-align:justify">
 	<font size="4" ><b>Paper review list 5</b> (<font size="4" color="#FF0000">due on 4/19</font>):</font>
 	<ol>
