--- a/teaching/23S-5218/index.htm
+++ b/teaching/23S-5218/index.htm
@@ -449,6 +449,17 @@ course website regularly for updated reading materials.</font>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 9 </font></td>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4" color="#FF0000"> - </font> </font></td>
 		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 9</b> <br>  </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+				<font size="4" color="#FF0000"><b>Spring Break</b> (no classes)</font>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
 		
 		<!--
 		
