--- a/teaching/23S-5218/index.htm
+++ b/teaching/23S-5218/index.htm
@@ -127,6 +127,9 @@ course website regularly for updated reading materials.</font>
 	
 	<ul>
 		<li>
+			<font size="4"> <b>03/15/2022:</b> Paper review list 5 is out, due on 3/28.</font>
+		</li>
+		<li>
 			<font size="4"> <b>03/06/2022:</b> Paper review list 4 is out, due on 3/14.</font>
 		</li>
 		<li>
@@ -233,10 +236,10 @@ course website regularly for updated reading materials.</font>
 	</ol>
 	</p>
 
-    <!--
+    
 	<p style="text-align:justify">
-	<font size="4" ><b>Paper review list 5</b> (<font size="4" color="#FF0000">due on 4/19</font>):</font>
-	<ol>
+	<font size="4" ><b>Paper review list 5</b> (<font size="4" color="#FF0000">due on 3/28</font>):</font>
+	<ol start="9">
 		<li>
 			<font size="4" > J. Chung, C. Gulcehre, K. Cho, and Y. Bengio, Empirical Evaluation of Gated Recurrent Neural Networks on Sequence Modelling, <i>NIPS Workshop</i>, 2014.</font>
 		</li>
@@ -245,7 +248,8 @@ course website regularly for updated reading materials.</font>
 		</li>
 	</ol>
 	</p>
-	
+
+	<!--
 	<p style="text-align:justify">
 	<font size="4" ><b>Paper review list 6</b> (<font size="4" color="#FF0000">due on 4/26</font>):</font>
 	<ol>
@@ -459,6 +463,38 @@ course website regularly for updated reading materials.</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 10</b> <br> 3/21 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+				<b>Recurrent Neural Networks (RNNs)</b>
+					<ul style="margin-top:5px;margin-bottom:5px;">
+					<li>
+						<font size="4"> Basics and Architecture </font>
+					</li>
+					</ul>
+				
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 10 </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/23 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+					<ul style="margin-top:5px;margin-bottom:5px;">
+						<li>
+							<font size="4"> Basics and Architecture (cont.)</font>
+						</li>
+					</ul>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 10 </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4" color="#FF0000"> -</font> </font></td>
 		</tr>
 		
 		<!--
