--- a/projects/PlanarTrack/index.htm
+++ b/projects/PlanarTrack/index.htm
@@ -55,7 +55,7 @@ div img:hover{
 	<br>
 	<font size="4" color="gray"> Institute of Software, CAS    &nbsp;  &nbsp; &nbsp; Dept. of Computer Science & Engineering, UNT   &nbsp;  &nbsp; (*Equal Contribution)</font>
 	<br> <br>
-	<font style="font-size:20px">[<img style="pointer-events: none; vertical-align: middle;" src="./pictures/arxiv.png" width="23" height="23"> <a href="https://hengfan2010.github.io/" target="https://hengfan2010.github.io/"><font color="#2E64FE">Paper</font></a>]</font> &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp;
+	<font style="font-size:20px">[<img style="pointer-events: none; vertical-align: middle;" src="./pictures/arxiv.png" width="23" height="23"> <a href="https://arxiv.org/abs/2303.07625" target="https://arxiv.org/abs/2303.07625"><font color="#2E64FE">Paper</font></a>]</font> &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp;
 	<font style="font-size:20px">[<img style="pointer-events: none; vertical-align: middle;" src="./pictures/data.png" width="23" height="23"> <a href="https://hengfan2010.github.io/" target="https://hengfan2010.github.io/"><font color="#2E64FE">Dataset (coming soon...)</font></a>]</font>  &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp;
 	<font style="font-size:20px">[<img style="pointer-events: none; vertical-align: middle;" src="./pictures/github.png" width="23" height="23"> <a href="https://hengfan2010.github.io/" target="https://hengfan2010.github.io/"><font color="#2E64FE">Code (coming soon...)</font></a>]</font>
 	<br>
