--- a/publications.html
+++ b/publications.html
@@ -35,6 +35,22 @@
 	<br>
 
 	<table border=0 cellpadding=4>
+
+		<tr>
+			<td><img src="./publication/planartrack.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">PlanarTrack: A Large-scale Challenging Benchmark for Planar Object Tracking</font>
+					<br>
+					<font color="#000000" >X. Liu*, X. Liu*, Z. Yi*, X. Zhou*, T. Le, L. Zhang, Y. Huang, Q. Yang, and H. Fan (*equal contribution)</font>
+					<br>
+					<font>	arXiv:2303.07625, 2023. </font>
+					<br>
+					<a href="https://arxiv.org/abs/2303.07625" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://hengfan2010.github.io/projects/PlanarTrack/" target="_blank"><font color="#0099ff">project (coming soon)</font></a>
+					<br>
+				</p>
+			</td>
+		</tr>
 		
 		<tr>
 			<td><img src="./publication/mga.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
@@ -83,7 +99,7 @@
 					<br>
 					<font color="#000000">L. Zhang and H. Fan</font>
 					<br>
-					<font>The Innovation, 2023, in press. (Invited)</font>
+					<font>The Innovation, 4(2), 100402, 2023. (Invited)</font>
 					<br>
 					<a href="https://www.cell.com/the-innovation/fulltext/S2666-6758(23)00030-9" target="_blank"><font color="#0099ff">paper</font></a>
 					<br>
