--- a/group.html
+++ b/group.html
@@ -45,7 +45,7 @@
 
 			<td width=150>
 				<center>
-					<img src="./groupimgs/female.png", height="125">
+					<img src="./groupimgs/LiuX.jpeg", height="125">
 					<br>
 					<font style="font-weight:bold">Xiaoqiong Liu</font>
 					<br>
@@ -55,9 +55,9 @@
 
 			<td width=150>
 				<center>
-					<img src="./groupimgs/male.png", height="125">
+					<img src="./groupimgs/DongS.jpg", height="125">
 					<br>
-					<font style="font-weight:bold">Shaohua Dong</font>
+					<font style="font-weight:bold"><a href="https://scholar.google.com/citations?user=5iSEcFkAAAAJ&hl=en" target="https://scholar.google.com/citations?user=5iSEcFkAAAAJ&hl=en"><font color="#0099ff" style="font-weight:bold">Shaohua Dong</font></a></font>
 					<br>
 					<font >PhD student</font>
 				</center>
@@ -65,7 +65,7 @@
 
 			<td width=150>
 				<center>
-					<img src="./groupimgs/male.png", height="125">
+					<img src="./groupimgs/LeT.jpg", height="125">
 					<br>
 					<font style="font-weight:bold">Thanh Le</font>
 					<br>
