--- a/publications.html
+++ b/publications.html
@@ -46,7 +46,7 @@
 					<br>
 					<font>	arXiv:2303.07625, 2023. </font>
 					<br>
-					<a href="https://arxiv.org/abs/2303.07625" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://hengfan2010.github.io/projects/PlanarTrack/" target="_blank"><font color="#0099ff">project (coming soon)</font></a>
+					<a href="https://arxiv.org/abs/2303.07625" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://hengfan2010.github.io/projects/PlanarTrack/" target="_blank"><font color="#0099ff">project</font></a>
 					<br>
 				</p>
 			</td>
