--- a/projects/PlanarTrack/index.htm
+++ b/projects/PlanarTrack/index.htm
@@ -100,6 +100,7 @@ div img:hover{
 		<ul style="line-height:150%; ">
 			<li style="text-align:justify"><b style="color: rgb(8, 166, 68); font-style:italic;">Scale:</b> PlanarTrack is to date the largest planar tracking benchmark with 1,000 videos from the wild</li>
 			<li style="text-align:justify"><b style="color: rgb(8, 166, 68); font-style:italic;">Diversity:</b> PlanarTrack includes 1,000 planar targets that are unique in each video for tracking</li>
+			<li style="text-align:justify"><b style="color: rgb(8, 166, 68); font-style:italic;">High quality:</b> Each video in PlanarTrack is manually labeled with careful inspection and refinment</li>
 			<li style="text-align:justify"><b style="color: rgb(8, 166, 68); font-style:italic;">Challenge:</b> All the video sequences in PlanarTrack are captured in unconstrained conditions</li>
 			<li style="text-align:justify"><b style="color: rgb(8, 166, 68); font-style:italic;">PlanarTrack<sub>BB</sub>:</b> A new PlanarTrack<sub>BB</sub> is derived from PlanarTrack for geneirc tracking</li>
 		</ul>
