--- a/projects/PlanarTrack/index.htm
+++ b/projects/PlanarTrack/index.htm
@@ -164,7 +164,7 @@ div img:hover{
 	<center>
 		<img src="./pictures/fig3.png" width="810">
 		<p style="margin-top:5px;color: gray; font-style:italic;">
-			<b>Comparison of PlanarTrack with the popular POT-210 on statistics.</b>
+			<b>Comparison of PlanarTrack with popular POT-210/280 on statistics.</b>
 		</p>
 	</center>
 	<br>
