--- a/publications.html
+++ b/publications.html
@@ -36,6 +36,22 @@
 
 	<table border=0 cellpadding=4>
 
+		<!-- <tr>
+			<td><img src="./publication/semo.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Augment and Criticize: Exploring Informative Samples for Semi-Supervised Monocular 3D Object Detection</font>
+					<br>
+					<font color="#000000" >Z. Li, Z. Zhang, H. Fan, Y. He, K. Wang, X. Liu, and J. Jiang</font>
+					<br>
+					<font>arXiv:2303.11243, 2023. </font>
+					<br>
+					<a href="https://arxiv.org/abs/2303.11243" target="_blank"><font color="#0099ff">paper</font></a>
+					<br>
+				</p>
+			</td>
+		</tr> -->
+
 		<tr>
 			<td><img src="./publication/planartrack.gif", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
