--- a/teaching/23S-5218/index.htm
+++ b/teaching/23S-5218/index.htm
@@ -252,7 +252,7 @@ course website regularly for updated reading materials.</font>
 	<!--
 	<p style="text-align:justify">
 	<font size="4" ><b>Paper review list 6</b> (<font size="4" color="#FF0000">due on 4/26</font>):</font>
-	<ol>
+	<ol start="11">
 		<li>
 			<font size="4" > A. Vaswani, N. Shazeer, N. Parmar, J. Uszkoreit, L. Jones, A. Gomez, Ł. Kaiser, and I. Polosukhin, Attention is all you need, <i>NIPS</i>, 2017.</font>
 		</li>
@@ -261,6 +261,7 @@ course website regularly for updated reading materials.</font>
 		</li>
 	</ol>
 	</p>
+
 	
 	<p style="text-align:justify">
 	<font size="4" ><b>Additional paper review list for extra credits</b> (<font size="4" color="#FF0000">due on 5/5</font>):</font>
