--- a/teaching/23S-5218/index.htm
+++ b/teaching/23S-5218/index.htm
@@ -452,7 +452,7 @@ course website regularly for updated reading materials.</font>
 			</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 9 </font></td>
-			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4" color="#FF0000"> - </font> </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> - </font> </font></td>
 		</tr>
 
 		<tr>
@@ -495,141 +495,44 @@ course website regularly for updated reading materials.</font>
 			</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 10 </font></td>
-			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4" color="#FF0000"> -</font> </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 11</b> <br>3/28 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+					<ul style="margin-top:5px;margin-bottom:5px;">
+						<li>
+							<font size="4"> Applications</font>
+						</li>
+					</ul>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 10 </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/30 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+					<b>Transformers</b>
+					<ul style="margin-top:5px;margin-bottom:5px;">
+						<li>
+							<font size="4"> Background</font>
+						</li>
+						<li>
+							<font size="4"> Self- and Cross-attention</font>
+						</li>
+					</ul>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <a href="https://proceedings.neurips.cc/paper/2013/file/9aa42b31882ec039965f3c4923ce901b-Paper.pdf" target="_blank"><font color="#0099ff">Ref 1</font></a>, <a href="https://papers.nips.cc/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf" target="_blank"><font color="#0099ff">Ref 2</font></a>, <a href="https://aclanthology.org/N19-1423.pdf" target="_blank"><font color="#0099ff">Ref 3</font></a>, <a href="https://jalammar.github.io/illustrated-transformer/" target="_blank"><font color="#0099ff">Ref 4</font></a> (a blog), <a href="https://openreview.net/pdf?id=YicbFdNTTy" target="_blank"><font color="#0099ff">Ref 5</font></a> </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
 		</tr>
 		
 		<!--
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 2/24 </font></td>
-			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
-			<font size="4"> 
-					<ul style="margin-top:5px;margin-bottom:5px;">
-						<li>
-							<font size="4"> <font color="#FF0000">class canceled due to weather</font> </font>
-						</li>
-					</ul>
-			</font>
-			</td>
-			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-			<td width=200 style='width:180.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > - </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#A9CCE3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 7</b> <br> 3/1 </font></td>
-			<td width=500 style='width:480.0pt;background:#A9CCE3;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
-			<font size="4"> 
-				<b>PyTorch Tutorial</b>
-			</font>
-			</td>
-			<td width=500 style='width:480.0pt;background:#A9CCE3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-			<td width=200 style='width:180.0pt;background:#A9CCE3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <font size="4" color="#FF0000">Review list 1 is out, due on 3/8</font> </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <br> 3/3 </font></td>
-			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
-			<font size="4"> 
-				<b>Convolutional Neural Networks (CNNs)</b>
-					<ul style="margin-top:5px;margin-bottom:5px;">
-					<li>
-						<font size="4"> Convolution and Pooling </font>
-					</li>
-					</ul>
-				
-			</font>
-			</td>
-			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 9 </font></td>
-			<td width=200 style='width:180.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 8</b> <br> 3/8 </font></td>
-			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
-			<font size="4"> 
-					<ul style="margin-top:5px;margin-bottom:5px;">
-						<li>
-						<font size="4"> Convolution and Pooling (cont.) </font>
-					</li>
-					</ul>
-			</font>
-			</td>
-			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 9 </font></td>
-			<td width=200 style='width:180.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <font size="4" color="#FF0000">Review list 2 is out, due on 3/22; </font> </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/10 </font></td>
-			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
-			<font size="4"> 
-					<ul style="margin-top:5px;margin-bottom:5px;">
-						<li>
-							<font size="4"> CNN Architectures and Applications </font>
-						</li>
-					</ul>
-			</font>
-			</td>
-			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 9 </font></td>
-			<td width=200 style='width:180.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4" color="#FF0000"> Assignment 1 is out, due on 3/25;</font> </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#FBEEE6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 9</b> <br>  </font></td>
-			<td width=500 style='width:480.0pt;background:#FBEEE6;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
-			<font size="4"> 
-				<font size="4" color="#FF0000"><b>Spring Break</b> (no classes)</font>
-			</font>
-			</td>
-			<td width=500 style='width:480.0pt;background:#FBEEE6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-			<td width=200 style='width:180.0pt;background:#FBEEE6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 10</b> <br>3/22 </font></td>
-			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
-			<font size="4"> 
-					<ul style="margin-top:5px;margin-bottom:5px;">
-						<li>
-							<font size="4"> CNN Applications (cont.)</font>
-						</li>
-					</ul>
-			</font>
-			</td>
-			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 9 </font></td>
-			<td width=200 style='width:180.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4" color="#FF0000"> Paper review list 3 is out, due on 3/29;</font> </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/24 </font></td>
-			<td width=500 style='width:480.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
-			<font size="4"> 
-				<b>Recurrent Neural Networks (RNNs)</b>
-					<ul style="margin-top:5px;margin-bottom:5px;">
-					<li>
-						<font size="4"> Basics and Architecture </font>
-					</li>
-					</ul>
-				
-			</font>
-			</td>
-			<td width=500 style='width:480.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 10 </font></td>
-			<td width=200 style='width:180.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 11</b> <br>3/29 </font></td>
-			<td width=500 style='width:480.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
-			<font size="4"> 
-					<ul style="margin-top:5px;margin-bottom:5px;">
-						<li>
-							<font size="4"> Basics and Architecture (cont.)</font>
-						</li>
-					</ul>
-			</font>
-			</td>
-			<td width=500 style='width:480.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 10 </font></td>
-			<td width=200 style='width:180.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4" color="#FF0000"> Paper review list 3 is due today;</font> </font></td>
-		</tr>
 		
 		<tr>
 			<td width=100  style='width:80.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <br>3/31 </font></td>
