--- a/publications.html
+++ b/publications.html
@@ -317,7 +317,7 @@
 					<br>
 					<font color="#000000" >L. Lin*, H. Fan*, Z. Zhang, Y. Xu, and H. Ling (*equal contribution)</font>
 					<br>
-					<font>	Neural Information Processing Systems (<b>NeurIPS</b>), 2022.</font>
+					<font>	Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2022.</font>
 					<br>
 					<a href="./publication/SwinTrack-NeurIPS-2022.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="./publication/swintrack-poster.pdf" target="_blank"><font color="#0099ff">poster</font></a> &nbsp; <a href="https://github.com/HengLan/SwinTrack" target="_blank"><font color="#0099ff">code</font></a>
 					<br>
@@ -334,7 +334,7 @@
 					<br>
 					<font color="#000000" >M. Guo*, Z. Zhang*, H. Fan, and L. Jing (*equal contribution)</font>
 					<br>
-					<font>	Neural Information Processing Systems (<b>NeurIPS</b>), 2022.</font>
+					<font>	Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2022.</font>
 					<br>
 					<a href="./publication/VLT-NeurIPS-2022.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="./publication/vlt-poster.pdf" target="_blank"><font color="#0099ff">poster</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code</font></a>
 					<br>
