--- a/teaching/23S-5218/index.htm
+++ b/teaching/23S-5218/index.htm
@@ -127,6 +127,9 @@ course website regularly for updated reading materials.</font>
 	
 	<ul>
 		<li>
+			<font size="4"> <b>03/27/2022:</b> Paper review list 6 is out, due on 4/4.</font>
+		</li>
+		<li>
 			<font size="4"> <b>03/15/2022:</b> Paper review list 5 is out, due on 3/28.</font>
 		</li>
 		<li>
