--- a/projects/LaSOT/index.htm
+++ b/projects/LaSOT/index.htm
@@ -44,8 +44,9 @@ div img:hover{
 	<HR>
 	
 	<p style="text-align:justify">
-	<font size="4"><b>Note:</b> The official website of LaSOT can be found <a href="http://vision.cs.stonybrook.edu/~lasot/" target="_blank"><font color="#0099ff">here</font></a>. This webpage only provides 
-	  download links, as a backup.</font>
+	<font size="4"><b>Note 1:</b> The official website of LaSOT can be found <a href="http://vision.cs.stonybrook.edu/~lasot/" target="_blank"><font color="#0099ff">here</font></a>. This webpage only provides 
+	  download links, as a backup, in case that the download links in the official website are invalid.</font> <br><br>
+	  <font size="4"><b>Note 2:</b> <font color="blue">OneDrive is recommended to download the data. The data on the Google Drive may not be stable.</font></font>
 	</p>
 	
 		<HR>
@@ -57,17 +58,20 @@ div img:hover{
 			<p style="text-align:justify">
 			<ul>
 				<li>
-					<font size="4"> Sequences of all categories (MD5: 2f9fb392c6e2ce0192bba0d531703e2d)</font>
+					<font size="4"> Sequences of <b>all categories</b> from three sources (MD5: 2f9fb392c6e2ce0192bba0d531703e2d)</font>
 					<ul>
-						<li><font size="4"> <a href="https://drive.google.com/file/d/1nTvmKZSieCLASL1C0XkeWSDqlyS80fLz/view?usp=share_link" target="_blank"><font color="#0099ff">Google Drive</font></a></font></li>
+						<li><font size="4"> <a href="https://1drv.ms/u/s!Akt_zO4y_u6DgoQsxl9ixr5Y393qWA?e=7yTwjc" target="_blank"><font color="#0099ff">OneDrive</font></a></font></li>
+						<li><font size="4"> <a href="https://drive.google.com/file/d/1wnKcCuGxRTSPDnYcAB162juy_Qphbb14/view?usp=share_link" target="_blank"><font color="#0099ff">Google Drive part-1</font></a>  &nbsp;
+							  <a href="https://drive.google.com/file/d/1OANces8uLc2gAOFLGh4MaOqXUTrmZ77v/view?usp=share_link" target="_blank"><font color="#0099ff">Google Drive part-2</font></a>  &nbsp;
+							    <a href="https://drive.google.com/file/d/17LiijVbwUkAqgbCaj-W_33KbuX9RsYxy/view?usp=share_link" target="_blank"><font color="#0099ff">Google Drive part-3</font></a> </font></li>
 						<li><font size="4"> <a href="https://pan.baidu.com/s/1UbcQIU-Fpps7Jqq4WHRRkA" target="_blank"><font color="#0099ff">Baidu Pan</font></a></font></li>
 					</ul>
 				</li>
 				<br>
 				<li>
-					<font size="4"> Sequences of each category (<a href="http://vision.cs.stonybrook.edu/~lasot/data/md5.txt" target="_blank"><font color="#0099ff">MD5</font></a>) </font>
+					<font size="4"> Sequences of <b>each category</b> (<a href="http://vision.cs.stonybrook.edu/~lasot/data/md5.txt" target="_blank"><font color="#0099ff">MD5</font></a>) </font>
 					<ul>
-						<li><font size="4"> <a href="https://drive.google.com/drive/folders/1tBn9KzCqiyY98Yvm8vpvn12w_LDhr5_B?usp=share_link" target="_blank"><font color="#0099ff">Google Drive</font></a></font></li>
+						<li><font size="4"> <a href="https://1drv.ms/f/s!Akt_zO4y_u6DgoNSoMJrfnVwveDjhA?e=PBeyuD" target="_blank"><font color="#0099ff">OneDrive</font></a> </font></li>
 						<li><font size="4"> <a href="https://pan.baidu.com/s/1xFANiqkBHytE7stMOLUpLQ" target="_blank"><font color="#0099ff">Baidu Pan</font></a></font></li>
 					</ul>
 				</li>
@@ -75,9 +79,10 @@ div img:hover{
 				<li>
 					<font size="4"> Sequences of Testing set only (MD5: a9038384fd94d30e7ad6a1b7cf32ec73)</font>
 					<ul>
-						<li><font size="4"> <a href="https://drive.google.com/file/d/1UvhAGVRHr3loPCBe3_QNzT7-NBXIU-z1/view?usp=share_link" target="_blank"><font color="#0099ff">Google Drive</font></a></font></li>
+						<li><font size="4"> Not provided (please download the whole dataset and refer to <a href="./testing_set.txt" target="_blank"><font color="#0099ff">Testing Subset</font></a>)</font></li>
+						<!-- <li><font size="4"> <a href="https://drive.google.com/file/d/1FUtKPnvZ8yvLfEvKXutbniSfW-fBOmuI/view?usp=share_link" target="_blank"><font color="#0099ff">Google Drive</font></a></font></li>
 						<li><font size="4"> <a href="https://pan.baidu.com/s/1KBlrWGOFH9Fe85pCWN5ZkA&shfl=sharepset" target="_blank"><font color="#0099ff">Baidu Pan</font></a></font></li>
-						<li><font size="4"> <a href="http://vision.cs.stonybrook.edu/~lasot/data/LaSOTTesting.zip" target="_blank"><font color="#0099ff">Local</font></a></font></li>
+						<li><font size="4"> <a href="http://vision.cs.stonybrook.edu/~lasot/data/LaSOTTesting.zip" target="_blank"><font color="#0099ff">Local</font></a></font></li> -->
 					</ul>
 				</li>
 			</ul>
@@ -92,17 +97,18 @@ div img:hover{
 			<p style="text-align:justify">
 				<ul>
 					<li>
-						<font size="4"> Sequences of all categories (SHA1: 27F62B85A66844F91CEB2196F39A653FFB158224)</font>
+						<font size="4"> Sequences of <b>all categories</b> (SHA1: 27F62B85A66844F91CEB2196F39A653FFB158224)</font>
 						<ul>
-							<li><font size="4"> <a href="https://drive.google.com/file/d/1QFBJJKfoGoPiDVFPNWs4fYFMVW7jYtaQ/view?usp=share_link" target="_blank"><font color="#0099ff">Google Drive</font></a></font></li>
+							<li><font size="4"> <a href="https://1drv.ms/u/s!Akt_zO4y_u6DgoQrvo5h48AC15l67A?e=Zo6PWx" target="_blank"><font color="#0099ff">OneDrive</font></a> </font></li>
+							<li><font size="4"> <a href="https://drive.google.com/file/d/1J4Soimnoz_fPZANSzAHZ01OjxKDeBS88/view?usp=share_link" target="_blank"><font color="#0099ff">Google Drive</font></a></font></li>
 							<li><font size="4"> <a href="http://vision.cs.stonybrook.edu/~lasot/data/LaSOT_extension_subset.zip" target="_blank"><font color="#0099ff">Local</font></a></font></li>
 						</ul>
 					</li>
 					<br>
 					<li>
-						<font size="4"> Sequences of each category (<a href="http://vision.cs.stonybrook.edu/~lasot/data/extension_subset_sha1.txt" target="_blank"><font color="#0099ff">SHA1</font></a>) </font>
+						<font size="4"> Sequences of <b>each category</b> (<a href="http://vision.cs.stonybrook.edu/~lasot/data/extension_subset_sha1.txt" target="_blank"><font color="#0099ff">SHA1</font></a>) </font>
 						<ul>
-							<li><font size="4"> <a href="https://drive.google.com/drive/folders/1aQApha4Q1aiBz7MRP13Ljz1k9K4cQD7g?usp=share_link" target="_blank"><font color="#0099ff">Google Drive</font></a></font></li>
+							<li><font size="4"> <a href="https://1drv.ms/f/s!Akt_zO4y_u6DgoQZH_aGsNh2f6x6Dg?e=sldyAx" target="_blank"><font color="#0099ff">OneDrive</font></a></font></li>
 						</ul>
 					</li>
 				</ul>
@@ -119,8 +125,8 @@ div img:hover{
 						<li>
 							<font size="4"> Toolkit</font>
 							<ul>
-								<li><font size="4"> Conference version - <a href="https://drive.google.com/file/d/1vVFJU_dYD7brY1bS0764vf6PfhReWGXI/view?usp=share_link" target="_blank"><font color="#0099ff">Google Drive</font></a></font></li>
-								<li><font size="4"> Journal version (it also supports conference version) - <a href="https://drive.google.com/file/d/1Z71PfVQliCO5qsAL7IBHydS43GYo1jxm/view?usp=share_link" target="_blank"><font color="#0099ff">Google Drive</font></a></font></li>
+								<li><font size="4"> Conference version - <a href="https://drive.google.com/file/d/14gbxoSCe31qho1IV6pXx5LI-nzpDechR/view?usp=share_link" target="_blank"><font color="#0099ff">Google Drive</font></a> or <a href="https://github.com/HengLan/LaSOT_Evaluation_Toolkit" target="_blank"><font color="#0099ff">Github</font></a></font></li>
+								<li><font size="4"> Journal version (it also supports conference version) - <a href="https://drive.google.com/file/d/1e8CfElTsiFyC01gVak1gjid7nrgIFr2H/view?usp=share_link" target="_blank"><font color="#0099ff">Google Drive</font></a></font></li>
 							</ul>
 						</li>
 						<br>
