--- a/teaching/23S-5218/index.htm
+++ b/teaching/23S-5218/index.htm
@@ -127,34 +127,37 @@ course website regularly for updated reading materials.</font>
 	
 	<ul>
 		<li>
-			<font size="4"> <b>03/27/2022:</b> Paper review list 6 is out, due on 4/4.</font>
+			<font size="4"> <b>04/10/2023:</b> Paper review list 7 is out, due on 4/18.</font>
 		</li>
 		<li>
-			<font size="4"> <b>03/15/2022:</b> Paper review list 5 is out, due on 3/28.</font>
+			<font size="4"> <b>03/27/2023:</b> Paper review list 6 is out, due on 4/4.</font>
 		</li>
 		<li>
-			<font size="4"> <b>03/06/2022:</b> Paper review list 4 is out, due on 3/14.</font>
+			<font size="4"> <b>03/15/2023:</b> Paper review list 5 is out, due on 3/28.</font>
 		</li>
 		<li>
-			<font size="4"> <b>02/28/2022:</b> Paper review list 3 is out, due on 3/7.</font>
+			<font size="4"> <b>03/06/2023:</b> Paper review list 4 is out, due on 3/14.</font>
 		</li>
 		<li>
-			<font size="4"> <b>02/22/2022:</b> The project report is due on 4/20.</font>
+			<font size="4"> <b>02/28/2023:</b> Paper review list 3 is out, due on 3/7.</font>
 		</li>
 		<li>
-			<font size="4"> <b>02/22/2022:</b> The project proposal is due on 3/16.</font>
+			<font size="4"> <b>02/22/2023:</b> The project report is due on 4/20.</font>
 		</li>
 		<li>
-			<font size="4"> <b>02/22/2022:</b> Project list is out. Check it <font size="4"> <a href="./course_project.htm" target="_blank"><font color="#0099ff">here</font></a></font></font>
+			<font size="4"> <b>02/22/2023:</b> The project proposal is due on 3/16.</font>
 		</li>
 		<li>
-			<font size="4"> <b>02/09/2022:</b> Paper review list 2 is out, due on 2/26.</font>
+			<font size="4"> <b>02/22/2023:</b> Project list is out. Check it <font size="4"> <a href="./course_project.htm" target="_blank"><font color="#0099ff">here</font></a></font></font>
 		</li>
 		<li>
-			<font size="4"> <b>02/09/2022:</b> Paper review list 1 is out, due on 2/19.</font>
+			<font size="4"> <b>02/09/2023:</b> Paper review list 2 is out, due on 2/26.</font>
 		</li>
 		<li>
-			<font size="4"> <b>01/17/2022:</b> Course website has been launched.</font>
+			<font size="4"> <b>02/09/2023:</b> Paper review list 1 is out, due on 2/19.</font>
+		</li>
+		<li>
+			<font size="4"> <b>01/17/2023:</b> Course website has been launched.</font>
 		</li>
 	</ul>
 
@@ -268,24 +271,21 @@ course website regularly for updated reading materials.</font>
 	</ol>
 	</p>
 
-	<!--
+	
 	<p style="text-align:justify">
-	<font size="4" ><b>Additional paper review list for extra credits</b> (<font size="4" color="#FF0000">due on 5/5</font>):</font>
-	<ol>
+	<font size="4" ><b>Paper review list 7</b> (<font size="4" color="#FF0000">due on 4/18</font>):</font>
+	<ol start="14">
 		<li>
 			<font size="4" > Z. Liu, Y. Lin, Y. Cao, H. Hu, Y. Wei, Z. Zhang, S. Lin, and B. Guo, Hierarchical Vision Transformer using Shifted Windows, <i>ICCV</i>, 2021.</font>
 		</li>
 		<li>
-			<font size="4" > C. Finn, P. Abbeel, and S. Levine, Model-agnostic meta-learning for fast adaptation of deep networks, <i>ICML</i>, 2017.</font>
-		</li>
-		<li>
-			<font size="4" > S. Sabour, N. Frosst, and G. Hinton, Dynamic routing between capsules, <i>NIPS</i>, 2017.</font>
+			<font size="4" >N. Carion, F. Massa, G. Synnaeve, N. Usunier, A. Kirillov, and S. Zagoruyko, End-to-End Object Detection with Transformers, <i>ECCV</i>, 2020.</font>
 		</li>
 	</ol>
 	</p>
 	
 	</br>
-	-->
+	
 	
 	<HR>
 
@@ -523,6 +523,17 @@ course website regularly for updated reading materials.</font>
 			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/30 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
+					<b>Class canceled due to projector issue</b>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <a href="https://proceedings.neurips.cc/paper/2013/file/9aa42b31882ec039965f3c4923ce901b-Paper.pdf" target="_blank"><font color="#0099ff">Ref 1</font></a>, <a href="https://papers.nips.cc/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf" target="_blank"><font color="#0099ff">Ref 2</font></a>, <a href="https://aclanthology.org/N19-1423.pdf" target="_blank"><font color="#0099ff">Ref 3</font></a>, <a href="https://jalammar.github.io/illustrated-transformer/" target="_blank"><font color="#0099ff">Ref 4</font></a> (a blog), <a href="https://openreview.net/pdf?id=YicbFdNTTy" target="_blank"><font color="#0099ff">Ref 5</font></a> </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 12</b> <br>4/4 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
 					<b>Transformers</b>
 					<ul style="margin-top:5px;margin-bottom:5px;">
 						<li>
@@ -537,46 +548,10 @@ course website regularly for updated reading materials.</font>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <a href="https://proceedings.neurips.cc/paper/2013/file/9aa42b31882ec039965f3c4923ce901b-Paper.pdf" target="_blank"><font color="#0099ff">Ref 1</font></a>, <a href="https://papers.nips.cc/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf" target="_blank"><font color="#0099ff">Ref 2</font></a>, <a href="https://aclanthology.org/N19-1423.pdf" target="_blank"><font color="#0099ff">Ref 3</font></a>, <a href="https://jalammar.github.io/illustrated-transformer/" target="_blank"><font color="#0099ff">Ref 4</font></a> (a blog), <a href="https://openreview.net/pdf?id=YicbFdNTTy" target="_blank"><font color="#0099ff">Ref 5</font></a> </font></td>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
 		</tr>
-		
-		<!--
-		
+
 		<tr>
-			<td width=100  style='width:80.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <br>3/31 </font></td>
-			<td width=500 style='width:480.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
-			<font size="4"> 
-					<ul style="margin-top:5px;margin-bottom:5px;">
-						<li>
-							<font size="4"> Applications</font>
-						</li>
-					</ul>
-			</font>
-			</td>
-			<td width=500 style='width:480.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 10 </font></td>
-			<td width=200 style='width:180.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > - </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#D4EFDF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 12</b> <br>4/5 </font></td>
-			<td width=500 style='width:480.0pt;background:#D4EFDF;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
-			<font size="4"> 
-					<b>Transformers</b>
-					<ul style="margin-top:5px;margin-bottom:5px;">
-						<li>
-							<font size="4"> Background</font>
-						</li>
-						<li>
-							<font size="4"> Self- and Cross-attention</font>
-						</li>
-					</ul>
-			</font>
-			</td>
-			<td width=500 style='width:480.0pt;background:#D4EFDF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <a href="https://proceedings.neurips.cc/paper/2013/file/9aa42b31882ec039965f3c4923ce901b-Paper.pdf" target="_blank"><font color="#0099ff">Ref 1</font></a>, <a href="https://papers.nips.cc/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf" target="_blank"><font color="#0099ff">Ref 2</font></a>, <a href="https://aclanthology.org/N19-1423.pdf" target="_blank"><font color="#0099ff">Ref 3</font></a>, <a href="https://jalammar.github.io/illustrated-transformer/" target="_blank"><font color="#0099ff">Ref 4</font></a> (a blog), <a href="https://openreview.net/pdf?id=YicbFdNTTy" target="_blank"><font color="#0099ff">Ref 5</font></a> </font></td>
-			<td width=200 style='width:180.0pt;background:#D4EFDF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4" color="#FF0000"> Paper review list 4 is due today;</font> </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#D4EFDF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/7 </font></td>
-			<td width=500 style='width:480.0pt;background:#D4EFDF;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/6 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
 					<ul style="margin-top:5px;margin-bottom:5px;">
 						<li>
@@ -588,9 +563,51 @@ course website regularly for updated reading materials.</font>
 					</ul>
 			</font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#D4EFDF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <a href="https://proceedings.neurips.cc/paper/2013/file/9aa42b31882ec039965f3c4923ce901b-Paper.pdf" target="_blank"><font color="#0099ff">Ref 1</font></a>, <a href="https://papers.nips.cc/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf" target="_blank"><font color="#0099ff">Ref 2</font></a>, <a href="https://aclanthology.org/N19-1423.pdf" target="_blank"><font color="#0099ff">Ref 3</font></a>, <a href="https://jalammar.github.io/illustrated-transformer/" target="_blank"><font color="#0099ff">Ref 4</font></a> (a blog), <a href="https://openreview.net/pdf?id=YicbFdNTTy" target="_blank"><font color="#0099ff">Ref 5</font></a> </font></td>
-			<td width=200 style='width:180.0pt;background:#D4EFDF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > - </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <a href="https://proceedings.neurips.cc/paper/2013/file/9aa42b31882ec039965f3c4923ce901b-Paper.pdf" target="_blank"><font color="#0099ff">Ref 1</font></a>, <a href="https://papers.nips.cc/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf" target="_blank"><font color="#0099ff">Ref 2</font></a>, <a href="https://aclanthology.org/N19-1423.pdf" target="_blank"><font color="#0099ff">Ref 3</font></a>, <a href="https://jalammar.github.io/illustrated-transformer/" target="_blank"><font color="#0099ff">Ref 4</font></a> (a blog), <a href="https://openreview.net/pdf?id=YicbFdNTTy" target="_blank"><font color="#0099ff">Ref 5</font></a> </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > - </font></td>
 		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 13</b> <br>4/11 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+				<b>Advanced Topics</b>
+				<ul style="margin-top:5px;margin-bottom:5px;">
+					<li>
+						<font size="4"> Graph Convolutional Networks</font>
+					</li>
+					<li>
+						<font size="4"> Self-supervised Learning</font>
+					</li>
+				</ul>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <a href="https://tkipf.github.io/graph-convolutional-networks/" target="_blank"><font color="#0099ff">Ref 1</font></a>, <a href="https://openaccess.thecvf.com/content_iccv_2015/papers/Doersch_Unsupervised_Visual_Representation_ICCV_2015_paper.pdf" target="_blank"><font color="#0099ff">Ref 2</font></a> </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <br>4/13 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+				<ul style="margin-top:5px;margin-bottom:5px;">
+					<li>
+						<font size="4"> Generation</font>
+					</li>
+					<li>
+						<font size="4"> Generative Adversarial Networks</font>
+					</li>
+					<li>
+						<font size="4"> Ethics in Deep Learning (optional)</font>
+					</li>
+				</ul>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <a href="https://papers.nips.cc/paper/2014/hash/5ca3e9b122f61f8f06494c97b1afccf3-Abstract.html" target="_blank"><font color="#0099ff">Ref 1</font></a>, <a href="https://proceedings.neurips.cc/paper/2016/file/a486cd07e4ac3d270571622f4f316ec5-Paper.pdf" target="_blank"><font color="#0099ff">Ref 2</font></a>, <a href="https://openaccess.thecvf.com/content_ECCV_2018/papers/Lisa_Anne_Hendricks_Women_also_Snowboard_ECCV_2018_paper.pdf" target="_blank"><font color="#0099ff">Ref 3</font></a> </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
+		</tr>
+		
+		<!--
 		
 		<tr>
 			<td width=100  style='width:80.0pt;background:#F9E79F;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 13</b> <br>4/12 </font></td>
