--- a/teaching/23S-5218/index.htm
+++ b/teaching/23S-5218/index.htm
@@ -526,7 +526,7 @@ course website regularly for updated reading materials.</font>
 					<b>Class canceled due to projector issue</b>
 			</font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <a href="https://proceedings.neurips.cc/paper/2013/file/9aa42b31882ec039965f3c4923ce901b-Paper.pdf" target="_blank"><font color="#0099ff">Ref 1</font></a>, <a href="https://papers.nips.cc/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf" target="_blank"><font color="#0099ff">Ref 2</font></a>, <a href="https://aclanthology.org/N19-1423.pdf" target="_blank"><font color="#0099ff">Ref 3</font></a>, <a href="https://jalammar.github.io/illustrated-transformer/" target="_blank"><font color="#0099ff">Ref 4</font></a> (a blog), <a href="https://openreview.net/pdf?id=YicbFdNTTy" target="_blank"><font color="#0099ff">Ref 5</font></a> </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">- </font></td>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
 		</tr>
 
